kserve/kserve-authorization.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: allow-all
 namespace: kubeflow-user-example-com
spec:
 rules:
 - {}
